# sprite_news_to_pmd_rs

./: .gitignore  Cargo.toml
src/: all_changes.rs  credit.rs  get_changes_from_repo.rs  git_change.rs  imagestore.rs  lib.rs  main.rs  monster_id.rs  output.rs  portrait.rs  portrait_picture.rs  tracker.rs
src/sprite/: animdata.rs  mod.rs  present.rs  spritesheet.rs
