[package]
name = "sprite_news_presentation"
version = "0.1.0"
authors = ["marius david <mariusdavid@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pmd_wan = "1.2.0"
image = "0.23.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
hex = "0.4.3"
git2 = "0.13.17"
serde-xml-rs = "0.4.1"
apng = { git = "https://github.com/marius851000/apng.git", rev="52691704c3d87dfe59b3fb03bfa2b94c6554ace2"}
png = "0.16.8"
encoding_rs = "0.8.28"